[package]
name = "stats_alloc_helper"
version = "0.1.0"
edition = "2021"
authors = ["Ivan Babrou <github@ivan.computer>"]
license = "BSD-3-Clause"
description = "A test helper to measure memory allocations"
keywords = ["alloc", "stats_alloc", "benchmark"]

[dependencies]
stats_alloc = { version = "0.1" }
