[package]
name = "stats_alloc_helper"
version = "0.3.1"
edition = "2021"
authors = ["Ivan Babrou <github@ivan.computer>"]
repository = "https://github.com/bobrik/stats_alloc_helper"
license = "BSD-3-Clause"
description = "A test helper to measure memory allocations"
keywords = ["alloc", "stats_alloc", "benchmark"]

[dependencies]
stats_alloc = { version = "0.1" }
tokio = { version = "1", features = ["rt", "macros"], optional = true }
libc = { version = "0.2" }
probe = { version = "0.5" }

[features]
default = []
async_tokio = ["tokio"]
